# GPPG

./: .gitignore  README  README.md
CMake/: CMakeLists.txt
CMake/CPGSimulator/: CMakeLists.txt
CMake/GPPG/: CMakeLists.txt  GPPG_Prefix.pch
CMake/GPPG/Model/Pathway/: Operation.cpp
CMake/GPPG/Model/Sequence/: Data.h  IO.h
CMake/GPPG/Operation/: BaseCompressionPolicy.h  Operation.h  OperationHeap.h  UbiOperationGraph.h
CMake/GPPG/Util/: Tools.cpp
Demo/: Demo.1  main.cpp
Demo/CPGSimulator.xcodeproj/: project.pbxproj  truths.mode1v3  truths.pbxuser
Demo/Demo.xcodeproj/: project.pbxproj  truths.mode1v3  truths.pbxuser
Demo/Demo2.xcodeproj/: truths.mode1v3
GPPG/: CMakeLists.txt
GPPG/CPGSimulator/: CMakeLists.txt  main.cpp
GPPG/GPPGLib/: CMakeLists.txt  GPPG.h.in
GPPG/GPPGLib/Base/: FitnessFunction.cpp  FitnessFunction.h  Genotype.cpp  Genotype.h  GenotypeFactory.cpp  Recombinator.cpp  Simulator.cpp  Simulator.h
GPPG/GPPGLib/Model/Pathway/: Data.cpp  Data.h  Fitness.cpp  Fitness.h  IO.cpp  IO.h  Operation.cpp  Operation.h
GPPG/GPPGLib/Model/Sequence/: Data.cpp  Data.h  IO.cpp  Operation.cpp  Operation.h
GPPG/GPPGLib/Operation/: BaseCompressionPolicy.cpp  BaseCompressionPolicy.h  CompressionPolicy.cpp  CompressionPolicy.h  GreedyLoad.cpp  GreedyLoad.h  GreedyLoadMap.cpp  GreedyLoadMap.h  Operation.cpp  Operation.h  OperationHeap.cpp  OperationHeap.h  Simulator.cpp  Simulator.h  UbiOperationGraph.cpp
GPPG/GPPGLib/Simulator/: EvoSimulator.cpp  EvoSimulator.h
GPPG/GPPGLib/Util/: Random.cpp  Random.h  Tools.h  binomial.h
GPPG/RegModel/: main.cpp
input/: ex1.js  ex2.js  exp1.js  exp4.json  pathway.json  sequence_output.json
input/regmodel/: ecoli.json  ecoli_exp.json  ecoli_genome.json  experiment.py  toy_genome.json
pyGPPG/: setup.py
pyGPPG/gppg/model/: sequence.c  sequence.cpp  sequence.pxd  sequence.pyx
src/: GPPG.cp  GPPG.h  GPPGPriv.h  GPPGTarget.xcconfig  doxygen.config
src/Base/: Genotype.cpp  Genotype.h  GenotypeFactory.h  GenotypeHeap.cpp  GenotypeHeap.h  Mutator.cpp  Mutator.h  Recombinator.h  Simulator.cpp  Simulator.h
src/Demo/: main.cpp
src/GPPG.xcodeproj/: project.pbxproj  truths.mode1v3  truths.pbxuser
src/Model/: SequenceOperation.cpp  SequenceOperation.h
src/Model/DNA/: DNAOperation.cpp  DNAOperation.h
src/Model/Pathway/: Data.cpp  Data.h  Operation.cpp  Operation.h
src/Model/Sequence/: Data.cpp  Data.h  Operation.cpp  Operation.h
src/Operation/: CompressionPolicy.cpp  CompressionPolicy.h  GenotypeOp.cpp  GenotypeOp.h  GreedyLoad.cpp  GreedyLoad.h  Operation.cpp  Operation.h  OperationHeap.cpp  OperationHeap.h  UbiOperationGraph.cpp
src/Simulator/: EvoSimulator.cpp  EvoSimulator.h
src/Util/: Random.cpp  Random.h  binomial.h
